--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "open": "node scripts/6-open-pack.js"
   },
   "dependencies": {
+    "@3rdweb/react": "^1.8.1",
     "@3rdweb/sdk": "^1.37.0",
     "axios": "^0.25.0",
     "dotenv": "^14.3.2",
